assets/css/main.css
:root {
  --test: magenta;
  --dGrey: rgb(78, 78, 78);
  --lGrey: #4e4e4e80;
  --slGrey: #e4e4e4;
  --dBlue: #59A0D9;
  --vdBlue: #005980;
  --lBlue: #00B1FF;
  --slBlue: #ABCFEB;
  --offBlue: #E5ECF2;
  --lGreen: #54DB00;
  --slGreen: #BDFFA0;
  --slRed: rgb(255, 61, 61);
  --white: #fff;
  --offWhite: #F5F5F5;
  --font-size1: 3em;
  --font-size2: 1em;
  --font-size3: 0.75em;
  --smaller1: 2em;
  --muli: 'Muli', sans-serif;
  --shadow: 0 0 6px rgba(0, 0, 0, 0.16);
  --baseTime: 300ms;
  --border-radius: 5px;
}
:focus {
  animation: bounce var(--baseTime);
}
@font-face {
  font-family: Ampersand;
  src: url('../fonts/MuktaMahee-SemiBold.ttf');
}

@font-face {
  font-family: FontAwesome;
  src: url('../fonts/FontAwesome.otf')
}

body {
  padding: 0;
  margin: 0;
  font-family: var(--muli);
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}

h1::selection,
h2::selection,
h3::selection,
p::selection,
label::selection,
a::selection,
li::selection {
  background: var(--slBlue);
}

p {
  margin: 0;
}

ol,
ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

h1 {
  font-size: var(--font-size1);
  font-weight: 900;
  color: var(--dGrey);
}

label {
  user-select: none;
}

/* page swap */
body:after {
  content: '';
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 997;
  background: var(--white);
  transition: opacity;
  will-change: opacity;
  animation: swipeOut 2s forwards;
  pointer-events: none;
}
@keyframes swipeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}
/* Nav styles */

body>nav {
  width: 80%;
  margin: 2em auto 0 auto;
  box-sizing: border-box;
  position: relative;
  display: grid;
  grid-template-columns: 1fr auto;
  z-index: 998;
  /* background: var(--white); */
}

body>nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  justify-content: flex-end;
  color: var(--dBlue);
}

body>nav ul li a {
  display: block;
  text-decoration: none;
  font-weight: 600;
  color: inherit;
  padding: 1.5em 1.5em;
  color: var(--dGrey);
  transition: 200ms;
  white-space: nowrap;
}

body>nav ul li {
  position: relative;
}

body>nav ul li:after {
  position: absolute;
  height: 2px;
  background: var(--dBlue);
  width: 0;
  content: '';
  bottom: 0;
  transition: var(--baseTime);
}

body>nav ul li:hover:after,
body>nav ul li:focus-within:after {
  width: 100%;
}

body>nav ul li a:focus,
body>nav ul li a:hover {
  outline: none;
  font-weight: 600;
  color: var(--dBlue);
}

body>nav ul li[aria-active="active"] a {
  font-weight: 900;
  color: var(--dBlue);
}
/* submenu */
body>nav ul li ul {
  position: absolute;
  max-height: 0;
  overflow: hidden;
  top: 4em;
  left: 0;
  z-index: 1;
  background: var(--white);
  transition: 600ms ease-in-out;
  display: block;
}
body>nav ul li:focus-within ul, body>nav ul li:hover ul {
  max-height: 100vh;
}

body>nav>a:nth-child(1),
body>nav ul>a {
  display: none;
}

body>nav>a:nth-child(2) {
  opacity: 0;
  margin: 0 2em 0 auto;
  display: grid;
  align-content: center;
  color: var(--dBlue);
  font-weight: 700;
  transition: opacity var(--baseTime);
}

body>nav>a:nth-child(2):focus {
  opacity: 1;
  outline: none;
}

@media (max-width: 37em) {
  body>nav:first-of-type {
    margin: 0;
    padding: 1em;
    width: 100%;
    grid-template-columns: 1fr auto;
  }
  body>nav>a:nth-child(1),
  body>nav ul>a {
    display: grid;
    align-content: center;
    font-family: FontAwesome;
    font-size: 2em;
    text-decoration: none;
    color: var(--dGrey);
    grid-column: 1 / -1;
  }
  body>nav ul>a {
    grid-column: 1;
  }
  body>nav>a:nth-child(2) {
    display: none;
  }
  body>nav ul {
    position: fixed;
    opacity: 0;
    height: 0;
    pointer-events: none;
    z-index: 999;
    transition: opacity var(--baseTime);
  }
  body>nav ul li:focus-within {
    background: var(--dBlue);
    color: white;
  }
  body>nav ul li:after {
    display: none;
  }
  body>nav ul li:focus-within a, body>nav ul li[aria-active]:focus-within a {
    color: white;
  }
  body>nav ul li a,
  body>nav ul li[aria-active] a {
    color: var(--white);
    font-weight: 900;
  }
  body>nav ul li[aria-active] a {
    color: var(--dBlue);
  }
  body>nav ul>a {
    position: fixed;
    top: 1rem;
    left: 1rem;
    color: var(--white);
    transform: rotate(45deg);
    transition: var(--baseTime);
    cursor: pointer;
  }
  body>nav ul li ul {
    display: none;
  }
  body>nav ul:target {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 1;
    pointer-events: unset;
    background: rgba(0, 0, 0, 0.9);
    display: grid;
    place-items: center center;
    justify-content: center;
    align-content: center;
    grid-gap: 2em;
  }
}

/* Modal styles */

body>a+div {
  height: 100%;
  width: 100%;
  top: -9999px;
  left: -9999px;
  opacity: 0;
  position: fixed;
  background: rgba(0, 0, 0, 0.6);
  display: grid;
  place-items: center center;
  transition: opacity var(--baseTime);
  z-index: 999;
}

body>div:target {
  opacity: 1;
  top: 0;
  left: 0;
}

body>div>a {
  position: fixed;
  z-index: -1;
  height: 100%;
  width: 100%;
}

body>div>a:after {
  content: '';
  transform: rotate(45deg);
  font-family: FontAwesome;
  font-size: 2em;
  position: absolute;
  right: 1em;
  top: 1em;
  color: white;
}

body>div>a:focus:after {
  color: var(--dBlue);
  animation: pop 2s infinite;
}

/* modal trigger */

body>a {
  position: fixed;
  right: 0;
  top: 70%;
  background: var(--dBlue);
  padding: 1em 1.5em;
  border-radius: 10px 10px 0 0;
  transform: rotate(-90deg) translatey(-50%);
  transform-origin: right;
  color: var(--white);
  text-decoration: none;
  font-weight: 700;
  animation: slideIn 2s forwards;
}

body>a:focus,
body>a:hover {
  animation: slideIn 2s forwards;
  outline: none;
  background: var(--lBlue);
}
/* ... */

